{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player1",
            "id": "a1d12d55-30da-4826-8979-ad4eb4d1fcd1",
            "actions": [
                {
                    "name": "Grab",
                    "type": "Button",
                    "id": "0ffe928d-c91a-4cd3-b0d2-66ca662fb84f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChooseScraps",
                    "type": "Value",
                    "id": "e78838ab-8fde-48a4-88fe-2ce95eabf9c1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3ef01775-682b-4f17-ab48-653d7e3a66d8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Grab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "782231d6-bfe9-42c2-a40d-a642f5b2154e",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChooseScraps",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "f99b3a13-2ebc-4437-933c-b0bd636c3945",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChooseScraps",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "234b89fe-25a2-4fdb-b54c-5659098a8b47",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChooseScraps",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "3a856c77-c692-446f-a98b-b4cd880d0eb1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChooseScraps",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Player2",
            "id": "7b525700-c088-4080-9ac2-2af8dcc5680e",
            "actions": [
                {
                    "name": "Grab",
                    "type": "Button",
                    "id": "50b24a01-ee16-4931-a77e-f222fe627125",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChooseScraps",
                    "type": "Value",
                    "id": "bfe0a5ce-eb33-4db8-a087-524f148a9a83",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5d803ef6-1496-4656-a107-6d46a9d727d0",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Grab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb636168-2f4e-499e-ae2d-e0bc01d0d811",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChooseScraps",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "6141a5a2-ff97-4503-9ff5-b034cb5ba82c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChooseScraps",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "919cb2b8-2075-4aa2-9689-c90d61d93925",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChooseScraps",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "9a987385-3b33-4369-81f8-050827f90298",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChooseScraps",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}